# pydantic-frozendict

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: package-version-patch.yml  tests.yml
pydantic_frozendict/: __init__.py
tests/: test_import.py  test_pydantic_frozendict.py
