[project]
name = "pydantic-frozendict"
version = "0.1.0"
description = "Frozendict that can be used as pydantic field annotation without a need to use arbitrary type"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "frozendict>=2.4.7",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydantic-frozendict"]
