[project]
name = "pydantic-frozendict"
version = "0.1.2"
description = "Frozendict that can be used as pydantic field annotation without a need to use arbitrary type"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "frozendict>=2.4.7",
    "pydantic>=2.12.5",
]
keywords = ["pydantic", "frozendict", "typing", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/yourname/pydantic-frozendict"
Issues = "https://github.com/yourname/pydantic-frozendict/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_frozendict"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
]
packaging = [
    "build>=1.3.0",
    "twine>=6.2.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
